--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,23 +17,26 @@ all-features = true
 
 [features]
 default = ["ctrl_pipe"]
-ctrl_pipe = ["tokio", "tokio-codec", "tokio-io"]
+ctrl_pipe = ["tokio/fs", "tokio-util/codec"]
 
 [dependencies]
-bytes = "0.4.12"
+bytes = "0.5.3"
 clap = "2.33.0"
-futures = "0.1.27"
+futures = "0.3.1"
 log = "0.4.8"
 pcap-file = "1.1.1"
-tokio = { version = "0.1.21", optional = true }
-tokio-codec = { version = "0.1.1", optional = true }
-tokio-io = { version = "0.1.12", optional = true }
+tokio = { version = "0.2.6", optional = true }
+tokio-util = { version = "0.2.0", optional = true }
 
 [dev-dependencies]
 ctrlc = "3.1.3"
 rand = "0.7.2"
 simplelog = "0.7.4"
 
+[dev-dependencies.tokio]
+version = "0.2.6"
+features = ["macros", "rt-threaded"]
+
 [[example]]
-name = "tcdump"
+name = "test_control_dump"
 required-features = ["ctrl_pipe"]
