Exclude ctrl_pipe feature from default, suppress unused variable warning when ctrl_pipe disabled

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ exclude = [
 all-features = true
 
 [features]
-default = ["ctrl_pipe"]
+default = []
 ctrl_pipe = ["tokio/fs", "tokio-util/codec"]
 
 [dependencies]
