--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,10 @@ jobs:
       with:
         command: build
         args: ${{ matrix.ftr }}
+
+    - name: Build examples
+      uses: actions-rs/cargo@v1
+      with:
+        command: build
+        args: ${{ matrix.ftr }} --examples
  
