--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,16 +27,19 @@ clap = "2.33.0"
 futures = "0.3.1"
 log = "0.4.8"
 pcap-file = "1.1.1"
-tokio = { version = "0.2.6", optional = true }
+tokio = { version = "0.2.8", optional = true }
 tokio-util = { version = "0.2.0", optional = true }
 
 [dev-dependencies]
 ctrlc = "3.1.3"
 rand = "0.7.2"
+serialport = "3.3.0"
 simplelog = "0.7.4"
+tokio-serial = "4.3.3"
+tokio-util = { version = "0.2.0", features = ["codec"] }
 
 [dev-dependencies.tokio]
-version = "0.2.6"
+version = "0.2.8"
 features = ["macros", "rt-threaded"]
 
 [[example]]
