--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install dependencies
-        run: |
-          sudo apt install libudev-dev
+      run: sudo apt install libudev-dev
 
     - name: Install components
       run: rustup component add --toolchain stable rustfmt clippy
