--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "extcap"
-version = "0.0.1"
+version = "0.1.0"
 authors = ["Tomas Kukosa <tkeksa@gmail.com>"]
 repository = "https://github.com/tkeksa/extcap-rs"
 license = "Apache-2.0 OR MIT"
@@ -19,15 +19,15 @@ all-features = true
 
 [features]
 default = []
-ctrl_pipe = ["tokio/fs", "tokio-util/codec"]
+ctrl_pipe = ["futures", "tokio/fs", "tokio-util/codec"]
 
 [dependencies]
 bytes = "0.5.3"
 clap = "2.33.0"
-futures = "0.3.1"
 log = "0.4.8"
 pcap-file = "1.1.1"
-tokio = { version = "0.2.8", optional = true }
+futures = { version = "0.3.1", optional = true }
+tokio = { version = "0.2.9", optional = true }
 tokio-util = { version = "0.2.0", optional = true }
 
 [dev-dependencies]
@@ -35,11 +35,12 @@ ctrlc = "3.1.3"
 rand = "0.7.2"
 serialport = "3.3.0"
 simplelog = "0.7.4"
+futures = "0.3.1"
 tokio-serial = "4.3.3"
 tokio-util = { version = "0.2.0", features = ["codec"] }
 
 [dev-dependencies.tokio]
-version = "0.2.8"
+version = "0.2.9"
 features = ["macros", "rt-threaded"]
 
 [[example]]
