--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ all-features = true
 [features]
 default = []
 async-api = ["futures"]
-ctrl-pipe = ["async-api", "futures", "tokio/fs", "tokio-util/codec"]
+ctrl-pipe = ["async-api", "tokio/fs", "tokio-util/codec"]
 
 [dependencies]
 bytes = "0.5.4"
@@ -28,7 +28,7 @@ clap = "2.33.0"
 log = "0.4.8"
 pcap-file = "1.1.1"
 futures = { version = "0.3.4", optional = true }
-tokio = { version = "0.2.17", optional = true }
+tokio = { version = "0.2.18", optional = true }
 tokio-util = { version = "0.3.1", optional = true }
 
 [dev-dependencies]
@@ -41,7 +41,7 @@ tokio-serial = "4.3.3"
 tokio-util = { version = "0.3.1", features = ["codec"] }
 
 [dev-dependencies.tokio]
-version = "0.2.17"
+version = "0.2.18"
 features = ["macros", "rt-threaded"]
 
 [[example]]
