--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install dependencies
-      run: sudo apt -o Acquire::Retries=3 install libudev-dev
+      run: |
+        sudo apt-get update -y
+        sudo apt-get install -y libudev-dev
 
     - name: Install components
       run: rustup component add --toolchain stable rustfmt clippy
