--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "extcap"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Tomas Kukosa <tkeksa@gmail.com>"]
 repository = "https://github.com/tkeksa/extcap-rs"
 license = "Apache-2.0 OR MIT"
@@ -8,7 +8,7 @@ description = "Crate for writing extcap Wireshark plugins."
 readme = "README.md"
 keywords = ["extcap", "Wireshark", "pcap"]
 categories = ["command-line-interface"]
-edition = "2018"
+edition = "2021"
 
 exclude = [
   ".github",
@@ -23,23 +23,23 @@ async-api = ["futures"]
 ctrl-pipe = ["async-api", "tokio/fs", "tokio-util/codec"]
 
 [dependencies]
-bytes = "0.5.0"
+bytes = "1.1.0"
 clap = "2.33.3"
 log = "0.4.14"
 pcap-file = "1.1.1"
 futures = { version = "0.3.17", optional = true }
-tokio = { version = "0.2.25", optional = true }
-tokio-util = { version = "0.3.1", optional = true }
+tokio = { version = "1.13.0", optional = true }
+tokio-util = { version = "0.6.9", optional = true }
 
 [dev-dependencies]
 ctrlc = "3.2.1"
 rand = "0.8.4"
-serialport = "3.3.0"
+serialport = "4.0.1"
 simplelog = "0.10.2"
 futures = "0.3.16"
-tokio-serial = "4.3.3"
-tokio = { version = "0.2.25", features = ["macros", "rt-threaded"] }
-tokio-util = { version = "0.3.1", features = ["codec"] }
+tokio-serial = "5.4.1"
+tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
+tokio-util = { version = "0.6.9", features = ["codec"] }
 
 [[example]]
 name = "test_serial_dump"
